fix note gap

--- a/src/components/Notes.module.css
+++ b/src/components/Notes.module.css
@@ -12,6 +12,11 @@
 
 .content {
   flex-grow: 1;
+  overflow-y: scroll;
+}
+
+.notes {
+  padding: var(--gap1) var(--note-gap);
 }
 
 .footer {
